@@ -1,3 +1,8 @@
+2011-07-21  Brian Gough  <bjg@gnu.org>
+
+	* mathieu_angfunc.c (gsl_sf_mathieu_se_array): handle the case
+	where q=0
+
 2011-07-15  Brian Gough  <bjg@network-theory.co.uk>
 
 	* trig.c (gsl_sf_lncosh_e): handle x symmetrically for middle
